# aucpl-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  settings.toml.example
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  errors.rs  main.rs  paths.rs  suggest.rs  util.rs
crates/cli/src/cli/: arg_builders.rs  cd.rs  comp.rs  complete.rs  completion_args.rs  init.rs  mod.rs  problem.rs  publish.rs  shellinit.rs  sync.rs
crates/cli/src/cli/complete/: mod.rs  resolve.rs  values.rs
crates/cli/src/cli/shellinit_scripts/: aucpl.bash  aucpl.fish  aucpl.zsh  mod.rs
crates/cli/src/comp/: add.rs  create.rs  finish.rs  list.rs  mod.rs  remove.rs  rename.rs  solve.rs  test.rs
crates/cli/src/problem/: archive.rs  category.rs  check.rs  compare.rs  create.rs  difficulty.rs  fuzz.rs  generate.rs  mod.rs  reclassify.rs  run.rs  solve.rs  sync_mappings.rs  test.rs  test_support.rs
nix/: shell.nix
