[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
description = "A helpful tool for AUCPL problem setters"
edition = "2021"
authors = ["Adelaide Competitive Programming Club"]
homepage = "https://github.com/AdelaideCPC/aucpl-cli"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.95"
clap = "4.5.26"
config = { version = "0.15.11", features = ["toml"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
subprocess = "0.2.9"
walkdir = "2.5.0"
