[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/cli"]

[workspace.package]
version = "0.3.0"
description = "A helpful tool for AUCPL problem setters"
edition = "2021"
authors = ["Adelaide Competitive Programming Club"]
homepage = "https://github.com/AdelaideCPC/aucpl-cli"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.95"
clap = "4.5.26"
clap_lex = "1.1.0"
config = { version = "0.15.11", features = ["toml"] }
normpath = "1.3"
numeric-sort = "0.1.5"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strsim = "0.11"
subprocess = "1.1.0"
tempfile = "3.14"
thiserror = "2.0"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"
