[package]
name = "aucpl"
version.workspace = true
description.workspace = true
edition.workspace = true

[[bin]]
name = "aucpl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
config.workspace = true
normpath.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
subprocess.workspace = true
walkdir.workspace = true
